# rag-learning

./: .env.template  .gitignore  Justfile  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.json
docker/: Dockerfile.backend  Dockerfile.backend.dockerignore  Dockerfile.migration  ollama-checker.sh
sample-docs/: 001-bedrock.md  002-claude-code.md  003-five-whys.md
scripts/: start-ollama.sh  stop-ollama.sh
src/: main.py
src/ai_agents/: base_agent.py
src/ai_agents/rag/: embedding.py  retrieving.py  vector_store.py
src/migrations/: env.py
src/migrations/versions/: 0001_init_vector_extension.py
src/modules/app/: app_controller.py
src/modules/chat/: chat_controller.py  chat_service.py
src/modules/chat/dto/: chat_dto.py
src/modules/rag/: rag_controller.py  rag_service.py
src/modules/rag/dtos/: create_document.py
src/server_config/: server.py  server_test.py  tracer.py  tracer_test.py
