[project]
name = "rag-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arize-phoenix-otel>=0.16.1",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "openinference-instrumentation-langchain>=0.1.64",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]
